IKASAN-2415 adding relevant modules to surefire plugin arg line.