@@ -521,12 +521,14 @@
                             --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
                             --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                             --add-opens java.base/sun.nio.cs=ALL-UNNAMED
+                            --add-opens java.base/sun.nio.fs=ALL-UNNAMED
                             --add-opens java.base/sun.security.action=ALL-UNNAMED
                             --add-opens java.base/sun.util.calendar=ALL-UNNAMED
                             --add-opens java.security.jgss/sun.security.krb5=ALL-UNNAMED
                             --add-opens java.xml/javax.xml.transform=ALL-UNNAMED
                             --add-opens java.xml/javax.xml.parsers=ALL-UNNAMED
                             --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+                            --add-exports java.base/sun.nio.fs=ALL-UNNAMED
                         </argLine>
                     </configuration>
                 </plugin>
